fixed overflow

--- a/dev/scss/global/_base.scss
+++ b/dev/scss/global/_base.scss
@@ -2,6 +2,10 @@
 /* /////////////////////////////////////////////////////////////////////// BASE /// */
 /* //////////////////////////////////////////////////////////////////////////////// */
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     display: flex;
     flex-direction: column;
